# multiclaude-ui

./: .eslintrc.js  .gitignore  .gitmodules  BOOTSTRAP.md  README.md  justfile  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  INTEGRATION.md
openspec/: project.md
reference/python/: README.md  __init__.py  pyproject.toml  types.py
registry/: categories.yaml  tools.yaml
scripts/: sync-types.sh
templates/python-tool/: .gitignore  README.md  pyproject.toml
templates/python-tool/src/multiclaude_tool/: __init__.py  cli.py  client.py  state.py  types.py
templates/python-tool/tests/: __init__.py  test_types.py
templates/typescript-tool/: .gitignore  README.md  package.json  tsconfig.json
templates/typescript-tool/src/: index.ts
